All Matching Patterns are Implemented  done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     
     
-    <h1 id="text">Play Rock-Paper-Scissors.</h1>
+    <h2 id="text">Play Rock-Paper-Scissors.</h2>
 
 
     <div class="playing-div">
@@ -62,7 +62,7 @@
         </div>
 
 
-        <div class="result-area">
+        <div id="result-area" class="result-area">
 
             <h1 class="start-status">Start Game.</h1>
 
